--- a/scaffold-web/src/main/webapp/WEB-INF/views/common/404.html
+++ b/scaffold-web/src/main/webapp/WEB-INF/views/common/404.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-<head>
-<meta charset="UTF-8">
-<title>404é”™è¯¯</title>
-</head>
-<body>
-è®¿é—®å‡ºé”™404ï¼ï¼ï¼
-</body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
+		<title>Õâ¸ö.. Ò³ÃæÃ»ÓĞÕÒµ½£¡£¡£¡</title>
+		
+		<style type="text/css">
+			body{ margin:0; padding:0; background:#efefef; font-family:Georgia, Times, Verdana, Geneva, Arial, Helvetica, sans-serif; }
+			div#mother{ margin:0 auto; width:943px; height:572px; position:relative; }
+			div#errorBox{ background: url(../../images/404_bg.png) no-repeat top left; width:943px; height:572px; margin:auto; }
+			div#errorText{ color:#39351e; padding:146px 0 0 446px }
+			div#errorText p{ width:303px; font-size:14px; line-height:26px; }
+			div.link{ /*background:#f90;*/ height:50px; width:145px; float:left; }
+			div#home{ margin:20px 0 0 444px;}
+			div#contact{ margin:20px 0 0 25px;}
+			h1{ font-size:40px; margin-bottom:35px; }
+		</style>
+		
+
+		
+	</head>
+	<body>
+		<div id="mother">
+			<div id="errorBox">
+				<div id="errorText">
+					<h1>Sorry..Ò³ÃæÃ»ÓĞÕÒµ½£¡</h1>
+					<p>
+						ËÆºõÄãËùÑ°ÕÒµÄÍøÒ³ÒÑÒÆ¶¯»ò¶ªÊ§ÁË¡£
+						<p>»òÕßÒ²ĞíÄãÖ»ÊÇ¼üÈë´íÎóÁËÒ»Ğ©¶«Î÷¡£</p>
+						Çë²»Òªµ£ĞÄ£¬ÕâÃ»ÊÂ¡£Èç¹û¸Ã×ÊÔ´¶ÔÄãºÜÖØÒª£¬ÇëÓë¹ÜÀíÔ±ÁªÏµ¡£
+					</p>
+
+					<p>
+						»ğĞÇ²»Ì«°²È«£¬ÎÒ¿ÉÒÔÃâ·ÑËÍÄã»ØµØÇò
+					</p>
+				</div>
+				<a href="" title="·µ»ØÊ×Ò³">
+					<div class="link" id="home"></div>
+				</a>
+				<a href="" title="ÁªÏµ¹ÜÀíÔ±">
+					<div class="link" id="contact"></div>
+
+				</a>
+			</div>
+		</div>
+	</body>
 </html>
